airliner/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airliner
  name: airliner
  namespace: airport-system
spec:
  ports:
    - name: 9002-tcp
      port: 9002
      protocol: TCP
      targetPort: 9002
  selector:
    app: airliner
  sessionAffinity: None
  type: ClusterIP
