airliner/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: airliner
    application-system: airport-system
  name: airliner
  namespace: airport-system
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: airliner
    weight: 100
